force-app/main/default/objects/Corp_Account_Location_Selling_Ability__c/Corp_Account_Location_Selling_Ability__c.object-meta.xml
<CustomObject>
    <description>Allows Corporate Account Managers to indicate selling ability at the local level</description>
    <label>Corp Account Location Selling Ability</label>
    <nameField>
        <displayFormat>KEYSELL-{0000}</displayFormat>
        <label>Selling Ability ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Corp Account Location Selling Ability</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>