force-app/main/default/objects/Corp_Account_Location_Selling_Ability__c/fields/Approved_to_Sell__c.field-meta.xml
<CustomField>
    <fullName>Approved_to_Sell__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Can this be sold?</description>
    <label>Approved to Sell</label>
    <type>Checkbox</type>
</CustomField>