force-app/main/default/objects/Corp_Account_Location_Selling_Ability__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Line of Business</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Key_Account_Location_Selling_Ability</relationshipName>
    <type>Lookup</type>
</CustomField>