force-app/main/default/objects/Corp_Account_Location_Selling_Ability__c/fields/Selling_Restritions__c.field-meta.xml
<CustomField>
    <fullName>Selling_Restritions__c</fullName>
    <defaultValue>&quot;No Selling Locally&quot;</defaultValue>
    <description>Conditions on selling</description>
    <label>Selling Restritions</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Approved_to_Sell__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Must use MSA, National Price Card, or Zone Pricing</fullName>
            </value>
            <value>
                <fullName>Locally Negotiated Pricing with KAM Approval</fullName>
            </value>
            <value>
                <fullName>Locally negotiated. No restrictions. No CAM approval required</fullName>
            </value>
            <value>
                <fullName>No Selling Locally</fullName>
            </value>
            <value>
                <fullName>No proactive selling but approved to provide if requested by customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>