force-app/main/default/objects/Corp_Account_Location_Selling_Ability__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <formula>if( Approved_to_Sell__c = True, &quot;Go Sell - &quot;+Product__r.Name, &quot;No Sell - &quot;+Product__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sort Order</label>
    <type>Text</type>
</CustomField>