force-app/main/default/objects/Corp_Account_Location_Selling_Ability__c/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <description>More detail on the LOB that can be sold</description>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Allied Products - Antifreeze</fullName>
            </value>
            <value>
                <fullName>Allied Products Except AF &amp; WWF</fullName>
                <label>Allied Products - Except AF &amp; WWF</label>
            </value>
            <value>
                <fullName>Allied Products - Windshield Washer Fluid</fullName>
            </value>
            <value>
                <fullName>Containerized Waste Services</fullName>
            </value>
            <value>
                <fullName>Emergency Response Services</fullName>
            </value>
            <value>
                <fullName>Field Services</fullName>
            </value>
            <value>
                <fullName>Oily Water and Antifreeze Services</fullName>
            </value>
            <value>
                <fullName>Parts Washer Services Solvent</fullName>
            </value>
            <value>
                <fullName>Parts Washing Service Aqueous</fullName>
            </value>
            <value>
                <fullName>Performance Plus Blended Lubricants</fullName>
            </value>
            <value>
                <fullName>Technical Services</fullName>
            </value>
            <value>
                <fullName>Used Motor Oil</fullName>
            </value>
            <value>
                <fullName>Vac Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>